2011-08-08  Jochen Eisinger  <jochen@chromium.org>

        webkit-patch doesn't get along with renamed files
        https://bugs.webkit.org/show_bug.cgi?id=48075

        Possibly a bit heavy handed - I removed all instances of -C and
        changed every instance of -M with '--no-renames' in git.py. This
        forces git to not try to tell us about renames at all, which is
        ultimately the behaviour we want. The old file is shown deleted,
        then the new file is shown added, followed by any changes that
        occurred. Also gets rid of the problem where deleting one file
        and adding another file which has similar content would
        unexpectedly show up as a rename, and fall out of a diff.

        Based on a patch by Wyatt Carss.

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/scm/git.py:

2011-08-07  Sam White  <samuel.white@rochester.edu>

        Add the ability to search the AccessibilityObject cache
        https://bugs.webkit.org/show_bug.cgi?id=64994
        
        Added testing support for AccessibilityObject cache searching. Currently,
        only the mac platform is full supported and has had API exposed. Other
        platforms have only have this new functionality stubbed. Full implementation
        is a job suited only for an accessibility expert of each respective platform.

        Reviewed by Chris Fleizach.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (uiElementForSearchPredicateCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::uiElementForSearchPredicate):
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::uiElementForSearchPredicate):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::uiElementForSearchPredicate):
